<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="active">Active</string>
    <string name="pulled">Pulled</string>
    <string name="test">Login</string>
    <string name="create">Create</string>
    <string name="map">Map</string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="find">Find</string>
    <string name="hint">Enter Place</string>
    <string name="retrack">Retrack</string>
    <string name="date">Date to be Reminded (MM/DD/YYYY):</string>
    <string name="none">None</string>
    <string name="color">Color: (blue, red, azure, cyan, green, magenta, orange, \nviolet, rose, yellow)</string>
    <string name="username">Username: (You can use upper/lower case letters, 0 to 9 digits)</string>
    <string name="password">Password: (Letter cases matters.)</string>
    <string name="password1">Password: (You can use upper/lower case letters, 0 to 9 digits)</string>
    <string name="password2">repeat passord:</string>
    <string name="go_reg">Register Now</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>
