<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

 	<Button
        android:id="@+id/pulled"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test"
        android:layout_alignBottom="@+id/test"
        android:layout_toLeftOf="@+id/test"
        android:onClick="goToPulledList"
        android:text="@string/pulled" />

    <Button
        android:id="@+id/active"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pulled"
        android:layout_alignBottom="@+id/pulled"
        android:layout_toLeftOf="@+id/pulled"
        android:onClick="goToActiveList"
        android:text="@string/active" />

    <Button
        android:id="@+id/create"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/active"
        android:layout_alignBottom="@+id/active"
        android:layout_toLeftOf="@+id/active"
        android:text="@string/create" />
    
    <fragment
        android:id="@+id/map"
        android:layout_below="@id/create"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/et_place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/active"
        android:layout_toLeftOf="@+id/btn_show"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="text" >

    <requestFocus />
    </EditText>

    <Button
        android:id="@+id/test"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/map"
        android:layout_below="@+id/btn_show"
        android:text="@string/test" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pulled"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/retrack"
        android:text="@string/find" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test"
        android:layout_alignRight="@+id/test"
        android:text="Refresh" />

    <Button
        android:id="@+id/retrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/refresh"
        android:layout_alignBottom="@+id/refresh"
        android:layout_toLeftOf="@+id/refresh"
        android:text="@string/retrack" />
    
</RelativeLayout>
